objects/EUR_CRM_Fair_Share_Audit__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Fair Share Audit (EU)</relationshipLabel>
        <relationshipName>Fair_Share_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Audit_Datetime__c</fullName>
        <label>Audit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Audit_Summary__c</fullName>
        <label>Audit Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipName>Fair_Share_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fair Share Audit (EU)</label>
    <nameField>
        <displayFormat>FSA-{00000000}</displayFormat>
        <label>Fair Share ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fair Share Audit (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_Fair_Share_Audit</fullName>
        <active>true</active>
        <label>EUR BE Off Trade Fair Share Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_Fair_Share_Audit</fullName>
        <active>true</active>
        <label>EUR RU Off Trade Fair Share Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>